# EXAM_YPPRPO

./: .gitignore  README.md
.github/workflows/: build.yml
Qt-test/: test.py
cpp-build/: CMakeLists.txt  README.md  main.cpp
python-build/: build.py
python-build/.github/workflow/: python-build.yml
python-build/docs/source/: conf.py  index.rst  modules.rst
python-build/src/main/python/: helloworld.py
python-build/src/unittest/python/: helloworld_tests.py
